[Works Section] - Fixing overflow problem
Fixing overflow-x problem

--- a/src/sections/works/works.module.css
+++ b/src/sections/works/works.module.css
@@ -1,14 +1,21 @@
-/*////////////*/
-/*///STYLES///*/
-/*////////////*/
+/* ///////////////// */
+/* MOBILE FIRST VIEW */
+/* ///////////////// */
+
+/* ////////// */
+/* Container */
+/* ////////// */
 
 .Container {
+  width: 100%;
   margin: 0;
-  height: 550px;
+  padding-top: 90px;
   align-items: center;
+
+  position: relative;
 }
 
-.MiddleContainer {
+.Container_Content {
   z-index: 10;
 }
 
@@ -20,6 +27,8 @@
   position: relative;
   margin-top: 35px;
 }
+
+/* 88888888888888888888888888888888 */
 
 .Carousel {
   height: 287px;
@@ -78,11 +87,129 @@
   margin: 0 5px 15px 5px;
 }
 
-/*/////////////*/
-/*/// VIEWS ///*/
-/*/////////////*/
+/* 88888888888888888888888888888888 */
 
-/* TABLET */
+/* ///////////////// */
+/* PLANET AND FXS */
+/* ///////////////// */
+.Container_Planet {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+}
+
+/* Planet Image */
+.Planet {
+  position: absolute;
+  width: 350px;
+  z-index: 2;
+  image-rendering: pixelated;
+}
+
+/* Planet FX */
+.Glow {
+  display: inline-block;
+  width: 320px;
+  height: 320px;
+  position: absolute;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.8);
+  filter: blur(30px);
+  -webkit-filter: blur(30px);
+
+  z-index: 1;
+}
+
+.FX_Planet_A {
+  display: inline-block;
+  width: 500px;
+  height: 500px;
+  position: absolute;
+  border-radius: 50%;
+  background: rgba(242, 65, 48, 0.41);
+  filter: blur(100px);
+  -webkit-filter: blur(100px);
+
+  z-index: 1;
+}
+
+.FX_Planet_B {
+  display: inline-block;
+  width: 500px;
+  height: 500px;
+  position: absolute;
+  border-radius: 50%;
+  background: rgba(242, 65, 48, 0.5);
+  filter: blur(100px);
+  -webkit-filter: blur(100px);
+
+  z-index: 4;
+}
+
+/* 88888888888888888888888888888888 */
+
+/* ////////////// */
+/* Background FXs */
+/* ////////////// */
+
+/* Container */
+.Container_Background_FX {
+  position: absolute;
+  overflow: hidden;
+
+  width: 100%;
+  height: 150%;
+  top: calc(-75% / 2);
+
+  z-index: 0;
+}
+
+/* FXs */
+.Background_FX_A {
+  display: inline-block;
+  position: absolute;
+  right: calc(-222px / 2);
+  top: calc(100% / 5);
+
+  width: 222px;
+  height: 266px;
+
+  background: radial-gradient(
+    50% 50% at 50% 50%,
+    rgba(242, 65, 48, 0.7) 0%,
+    rgba(242, 65, 48, 0.056) 100%
+  );
+  filter: blur(100px);
+  -webkit-filter: blur(100px);
+}
+
+.Background_FX_B {
+  display: inline-block;
+  position: absolute;
+  right: 0px;
+  top: calc(100% / 4);
+
+  width: 250px;
+  height: 300px;
+
+  background: radial-gradient(
+    50% 50% at 50% 50%,
+    rgba(36, 50, 201, 0.7) 0%,
+    rgba(36, 50, 201, 0.056) 100%
+  );
+  filter: blur(100px);
+  -webkit-filter: blur(100px);
+}
+
+/* 88888888888888888888888888888888 */
+/* 88888888888888888888888888888888 */
+/* 88888888888888888888888888888888 */
+
+/* /////////// */
+/* TABLET VIEW */
+/* /////////// */
 
 @media only screen and (min-width: 767px) and (max-width: 1023px) {
   .Container {
@@ -111,12 +238,15 @@
   }
 }
 
-/* SMALL PC */
+/* 88888888888888888888888888888888 */
+/* 88888888888888888888888888888888 */
+/* 88888888888888888888888888888888 */
+
+/* /////////////// */
+/*  SMALL PC VIEW  */
+/* /////////////// */
 
 @media only screen and (min-width: 1024px) and (max-width: 1439px) {
-  .Container {
-    height: 1050px;
-  }
   .CarouselContainer,
   .Dots {
     display: none;
@@ -142,12 +272,17 @@
   }
 }
 
-/* LARGE PC */
+/* 88888888888888888888888888888888 */
+/* 88888888888888888888888888888888 */
+/* 88888888888888888888888888888888 */
+
+/* ////////////// */
+/*  LARGE PC VIEW */
+/* ////////////// */
 
 @media only screen and (min-width: 1440px) {
   .Container {
     width: 1200px;
-    height: 1100px;
     margin: 0 auto;
     background-color: transparent;
   }
